--- a/views/pages/admin_login.ejs
+++ b/views/pages/admin_login.ejs
@@ -36,7 +36,7 @@
                                         </form>
                                         <hr>
                                         <div class="text-center">
-                                            <a class="small" href="forgot-password.html">Forgot Password?</a>
+                                            <a class="small" href="/">Articleium</a>
                                         </div>
                                     </div>
                                 </div>
