--- a/views/pages/article_view.ejs
+++ b/views/pages/article_view.ejs
@@ -42,7 +42,7 @@
     <a href="#comment-section"><button id="comment-button"><i class="material-icons edit-icon">comment</i></button></button></a>
     <button id="flag" onClick="flag();"><i class="md-48 material-icons">flag</i></button>
   </div>
-  <section class="about-section-1 text-center" id="article-view">
+  <section class="about-section-1" id="article-view">
     <!-- insert article view -->
     <div class="content">
       <span id="article-info">
