--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -42,9 +42,9 @@
                           </div>
                     </div>
                     <div class="col-lg-9">
-                        <div class="row m-0" id="article-container">
+                        <div class="row m-0 card-group" id="article-container">
                         <% articles.forEach(element => { %>
-                        <div class="col-lg-4 col-md-6 col-sm-6 px-2 pb-4 m-0" data-category="<%= element.genres %> ">
+                        <div class="col-lg-4 col-md-6 col-sm-6 px-2 pb-4 m-0">
                               <div class="card">
                                   <div class="card-body">
                                       <h5 class="card-title"><a href="/article/5fb352bb0bc1456f40de07f4"><%= element.title %> </a></h5>
