--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -36,7 +36,10 @@
                                         </form>
                                         <hr>
                                         <div class="text-center">
-                                            <a class="small" href="forgot-password.html">Forgot Password?</a>
+                                            <span class="small">Not a member?</span> <a class="small" href="/users/register">Join us</a>
+                                        </div>
+                                        <div class="text-center">
+                                            <a class="small" href="/">Articleium</a>
                                         </div>
                                     </div>
                                 </div>
