--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -19,24 +19,47 @@
                                 <div class="col-lg-12">
                                     <div class="p-5">
                                         <div class="text-center">
-                                            <h1 class="h4 text-gray-900 mb-4">Admin</h1>
+                                            <h1 class="h4 text-gray-900 mb-4">Register</h1>
                                         </div>
                                         <%- include ('../partials/messages.ejs') %> 
-                                        <form class="user" action="/admin/login" method="POST">
+                                        <form class="user" action="/users/register" method="POST">
                                             <div class="form-group">
                                                 <input type="email" class="form-control form-control-user"
-                                                    id="exampleInputEmail" name="username" aria-describedby="emailHelp"
+                                                    id="exampleInputEmail" name="emailsignup" aria-describedby="emailHelp"
                                                     placeholder="Enter Email Address...">
                                             </div>
                                             <div class="form-group">
                                                 <input type="password" class="form-control form-control-user"
-                                                    id="exampleInputPassword" name="password" placeholder="Password">
+                                                    id="exampleInputPassword" name="passwordsignup" placeholder="Password">
                                             </div>
-                                            <input type="submit" class="btn btn-primary btn-user btn-block" value="Login">
+                                            <div class="form-group">
+                                                <input type="password" class="form-control form-control-user"
+                                                    id="exampleInputPassword" name="passwordsignup_confirm" aria-describedby="passwordConfirmHelp"
+                                                    placeholder="Password Confirm">
+                                            </div>
+                                            <div class="form-group">
+                                                <input type="text" class="form-control form-control-user"
+                                                    id="exampleInputEmail" name="firstName" aria-describedby="firstNameHelp"
+                                                    placeholder="First Name">
+                                            </div>
+                                            <div class="form-group">
+                                                <input type="text" class="form-control form-control-user"
+                                                    id="exampleInputEmail" name="lastName" aria-describedby="lastNameHelp"
+                                                    placeholder="Last Name">
+                                            </div>
+                                            <div class="form-group">
+                                                <input type="number" min="13" class="form-control form-control-user"
+                                                    id="exampleInputEmail" name="age" aria-describedby="emailHelp"
+                                                    placeholder="Age">
+                                            </div>
+                                            <input type="submit" class="btn btn-primary btn-user btn-block" value="Register">
                                         </form>
                                         <hr>
                                         <div class="text-center">
-                                            <a class="small" href="forgot-password.html">Forgot Password?</a>
+                                            <span class="small">Already a member? </span><a class="small" href="/users/login">Log In</a>
+                                        </div>
+                                        <div class="text-center">
+                                            <a class="small" href="/">Articleium</a>
                                         </div>
                                     </div>
                                 </div>
