--- a/views/pages/newEditor.ejs
+++ b/views/pages/newEditor.ejs
@@ -50,13 +50,12 @@
                         <div class="form-group col-md-4">
                             <label for="inputState">Genre</label>
                             <select class="form-control" name="genre" required>
-                                <option selected="">Choose...</option>
                                 <option value="Tech">Tech</option>
                                 <option value="Art">Art</option>
                                 <option value="Fiction">Fiction</option>
-                                <option value="Mystery">Mystery</option>
-                                <option value="Suspense">Suspense</option>
-                                <option value="Political">Political</option>
+                                <option value="Tragedy">Tragedy</option>
+                                <option value="Tutorial">Tutorial</option>
+                                <option value="Politics">Politics</option>
                                 <option value="Comedy">Comedy</option>
                             </select>
                         </div>
