--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -20,12 +20,38 @@
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/home">Home</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/article/new">New Article</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/users/dashboard">Dashboard</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/users/profile">Profile</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="filterDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              Filter
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="filterDropdown">
+                              <a class="dropdown-item" href="#">Action</a>
+                              <a class="dropdown-item" href="#">Another action</a>
+                              <div class="dropdown-divider"></div>
+                              <a class="dropdown-item" href="#">Something else here</a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="notifsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              Notifications
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="notifsDropdown">
+                              <a class="dropdown-item" href="#">Action</a>
+                              <a class="dropdown-item" href="#">Another action</a>
+                              <div class="dropdown-divider"></div>
+                              <a class="dropdown-item" href="#">Something else here</a>
+                            </div>
+                        </li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/users/logout">Logout</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
+
+        <div class="container-fluid" id="article-container">
+
+        </div>
 
         <section class="about-section-1 min-vh-100" id="public-articles">
             <div class="container-fluid text-white text-justify">
@@ -33,7 +59,7 @@
                     <div class="col-md-3 col-lg-2">
                         <nav class="navbar navbar-default card" role="navigation">
                             <div>
-                                <ul class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">  
+                                <ul class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                                     <li class="nav-item m-2"><a class="nav-link active" id="v-pills-1-tab" data-toggle="pill" href="#v-pills-1" role="tab" aria-controls="v-pills-1" aria-selected="true">Your Articles</a></li>
                                     <li class="nav-item m-2"><a class="nav-link" id="v-pills-2-tab" data-toggle="pill" href="#v-pills-2" role="tab" aria-controls="v-pills-2" aria-selected="false">Liked Articles</a></li>
                                     <li class="nav-item m-2"><a class="nav-link" id="v-pills-3-tab" data-toggle="pill" href="#v-pills-3" role="tab" aria-controls="v-pills-3" aria-selected="false">Reported</a></li>
@@ -51,6 +77,7 @@
                                           <div class="card text-dark">
                                               <div class="card-body">
                                                   <h5 class="card-title"><a href="/article/<%= article._id%>"><%= article.title %></a></h5>
+                                                  <a href="/article/edit/<%= article._id%>">Edit..</a></h5>
                                                   <p class="card-text"><%= article.desc %></p>
                                                   <p class="card-text">Genre: <%= article.genre %></p>
                                               </div>
@@ -96,7 +123,7 @@
                         </div>
                         <div class="tab-pane fade" id="v-pills-4" role="tabpanel" aria-labelledby="v-pills-4-tab">
                             <div class="col-md-12 col-xs-12 min-vh-100">
-                                
+
                             </div>
                         </div>
                     </div>
@@ -109,5 +136,32 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="static/js/jquery.js"></script>
+        <script>
+            $(function(){
+                $(".btn").click(function(){
+                    $.post("/home",{
+                        genre: $(this).html()
+                    }, function(data) {
+                        console.log(data);
+                        let container = $('#article-container');
+                        container.html('');
+                        data.articles.forEach(function(article) {
+                            container.append(`\
+                                <div class="col-lg-4 col-md-6 col-sm-6 px-2 pb-4 m-0">\
+                                    <div class="card">\
+                                        <div class="card-body">\
+                                            <h5 class="card-title"><a href="/article/${article._id}">${article.title}</a></h5>\
+                                            <p class="card-text">${article.desc}</p>\
+                                            <p class="card-text">${article.genre}</p>\
+                                        </div>\
+                                    </div>\
+                                </div>\
+                            `);
+                        });
+                    })
+                })
+            });
+        </script>
     </body>
 </html>
