--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -50,7 +50,18 @@
         </nav>
 
         <div class="container-fluid" id="article-container">
-
+            <% articles.forEach(article => { %>
+            <div class="col-lg-4 col-md-6 col-sm-6 px-2 py-2 m-0">
+                <div class="card text-dark">
+                    <div class="card-body">
+                        <h5 class="card-title"><a href="/article/<%= article._id%>"><%= article.title %></a></h5>
+                        <a href="/article/edit/<%= article._id%>">Edit..</a></h5>
+                        <p class="card-text"><%= article.desc %></p>
+                        <p class="card-text">Genre: <%= article.genre %></p>
+                    </div>
+                </div>
+            </div>
+            <% }) %>
         </div>
 
         <section class="about-section-1 min-vh-100" id="public-articles">
