--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -37,10 +37,9 @@
                               Notifications
                             </a>
                             <div class="dropdown-menu" aria-labelledby="notifsDropdown">
-                              <a class="dropdown-item" href="#">Action</a>
-                              <a class="dropdown-item" href="#">Another action</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#">Something else here</a>
+                              <% user.notifications.forEach(element => { %>
+                                <a class="dropdown-item" href="#"><%= element %></a>
+                              <% }) %>
                             </div>
                         </li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/users/logout">Logout</a></li>
@@ -49,7 +48,7 @@
             </div>
         </nav>
 
-        <div class="container-fluid" id="article-container">
+        <!-- <div class="container-fluid" id="article-container">
             <% articles.forEach(article => { %>
             <div class="col-lg-4 col-md-6 col-sm-6 px-2 py-2 m-0">
                 <div class="card text-dark">
@@ -62,7 +61,7 @@
                 </div>
             </div>
             <% }) %>
-        </div>
+        </div> -->
 
         <section class="about-section-1 min-vh-100" id="public-articles">
             <div class="container-fluid text-white text-justify">
