articles added;minor changes

--- a/public/css/article_view.css
+++ b/public/css/article_view.css
@@ -18,7 +18,7 @@ background-image: url('');
   text-align: center;
 }
 #article-desc {
-  color: grey;
+  color: black;
 }
 .author-info {
   display: inline-block;
