made editor responsive

--- a/views/pages/newEditor.ejs
+++ b/views/pages/newEditor.ejs
@@ -95,7 +95,7 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script>
         CKEDITOR.replace('editor');
-        CKEDITOR.config.width = 1124;
+        CKEDITOR.config.width = "auto";
         CKEDITOR.config.height = 1000;
         CKEDITOR.env.isCompatible = true;
         CKEDITOR.addCss('.cke_editable img { max-width: 100% !important; height: auto !important; }');
