--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -9,7 +9,7 @@
         <link href="static/css/admin.min.css" rel="stylesheet">
         <%- include('../partials/head.ejs') %>
     </head>
-    <body style="background-image: url(static/imgs/bg-masthead.jpg);">
+    <body style="background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000000 100%), url('/static/imgs/bg-masthead.jpg');">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-6 col-lg-12 col-md-9">
