--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -27,13 +27,27 @@
             </div>
         </nav>
 
+        <!-- <div class="container-fluid about-section-1 min-vh-100 px-4">
+            <div class="card-columns">
+                <% articles.forEach(element => { %>
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title"><a href="/article/<%= element._id %>"><%= element.title %> </a></h5>
+                            <p class="card-text"><%= element.desc %></p>
+                            <p class="card-text"><%= element.genre %></p>
+                        </div>
+                    </div>
+                <% }) %>
+            </div>
+        </div> -->
+
         <section class="about-section-1 text-center min-vh-100" id="public-articles">
             <div class="container-fluid">
                 <div class="row">
                     <h2 class="text-white text-center mx-auto p-4">Public Articles</h2>
                 </div>
                 <div class="row">
-                    <div class="col-lg-3">
+                    <div class="col-3">
                         <div class="btn-group-vertical" role="group" aria-label="First group">
                             <button type="button" class="btn btn-light">Comedy</button>
                             <button type="button" class="btn btn-light">Politics</button>
@@ -45,7 +59,7 @@
                             <button type="button" class="btn btn-light">Fiction</button>
                         </div>
                     </div>
-                    <div class="col-lg-9">
+                    <div class="col-9">
                         <div class="row m-0 card-group" id="article-container">
                         <% articles.forEach(element => { %>
                         <div class="col-lg-4 col-md-6 col-sm-6 px-2 pb-4 m-0">
