Changed Dashboard and Added Followed Private Articles

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10265,9 +10265,9 @@ body {
   margin-bottom: 5rem;
 }
 
-.about-section-1 p {
+/* .about-section-1 p {
   margin-bottom: 5rem;
-}
+} */
 
 .projects-section {
   padding: 10rem 0;
