--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -49,13 +49,13 @@
                 <div class="row">
                     <div class="col-3">
                         <div class="btn-group-vertical" role="group" aria-label="First group">
+                            <button type="button" class="btn btn-light">All</button>
                             <button type="button" class="btn btn-light">Comedy</button>
                             <button type="button" class="btn btn-light">Politics</button>
                             <button type="button" class="btn btn-light">Tragedy</button>
                             <button type="button" class="btn btn-light">Tech</button>
                             <button type="button" class="btn btn-light">Tutorial</button>
                             <button type="button" class="btn btn-light">Art</button>
-                            <button type="button" class="btn btn-light">Tech</button>
                             <button type="button" class="btn btn-light">Fiction</button>
                         </div>
                     </div>
