--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -70,9 +70,9 @@
             </div>
         </div>
 
-        <script src="vendor/jquery/jquery.min.js"></script>
-        <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-        <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+        <script src="static/js/jquery/jquery.min.js"></script>
+        <script src="static/js/bootstrap.bundle.min.js"></script>
+        <script src="static/js/jquery-easing/jquery.easing.min.js"></script>
         <script src="static/js/admin.min.js"></script>
 
     </body>
