--- a/views/pages/user_articles.ejs
+++ b/views/pages/user_articles.ejs
@@ -72,6 +72,8 @@
                                 <div class="w-100"></div>
                                 <div class="card-footer w-100 text-muted">
                                     <p class="card-text"><%= article.genre %></p>
+                                    <a class="btn btn-primary" href="/article/edit/<%= article._id%>">Edit</a></h5>
+                                    <a class="btn btn-danger" href="/article/delete/<%= article._id%>">Delete</a></h5>
                                 </div>
                             </div>
                         </div>
