--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -19,6 +19,16 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/home">Home</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="notifsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              Notifications
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="notifsDropdown">
+                              <% user.notifications.forEach(element => { %>
+                                <a class="dropdown-item" href="#"><%= element %></a>
+                              <% }) %>
+                            </div>
+                        </li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/admin/logout">Logout</a></li>
                     </ul>
                 </div>
@@ -28,42 +38,23 @@
         <section class="about-section-1 min-vh-100" id="public-articles">
             <div class="container-fluid text-white text-justify">
                 <div class="row">
-                    <div class="col-md-3 col-lg-2">
-                        <nav class="navbar navbar-default card" role="navigation">
-                            <div>
-                                <ul class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                                    <li class="nav-item m-2"><a class="nav-link active" id="v-pills-1-tab" data-toggle="pill" href="#v-pills-1" role="tab" aria-controls="v-pills-1" aria-selected="true">Reported Articles</a></li>
-                                    <li class="nav-item m-2"><a class="nav-link" id="v-pills-4-tab" data-toggle="pill" href="#v-pills-2" role="tab" aria-controls="v-pills-4" aria-selected="false">Notifications</a></li>
-                                </ul>
+                    <div class="col-md-12 col-xs-12 min-vh-100">
+                        <div class="row m-0 card-group" id="article-container">
+                            <% articles.forEach(article => { %>
+                            <div class="col-lg-4 col-md-6 col-sm-6 px-2 py-2 m-0">
+                                  <div class="card text-dark">
+                                      <div class="card-body">
+                                          <h5 class="card-title"><a href="/article/<%= article._id%>"><%= article.title %></a></h5>
+                                          <p class="card-text"><%= article.desc %></p>
+                                          <p class="card-text">Genre: <%= article.genre %></p>
+                                      </div>
+                                      <div class="card-footer">
+                                        <a class="btn btn-warning" href="/admin/warn/<%= article.author_id%>/<%= article._id%>">Warn</a></h5>
+                                        <a class="btn btn-danger" href="/admin/delete/<%= article._id%>">Delete</a></h5>
+                                      </div>
+                                  </div>
                             </div>
-                        </nav>
-                    </div>
-                    <div class="col-md-9 col-lg-10 tab-content">
-                        <div class="tab-pane fade show active" id="v-pills-1" role="tabpanel" aria-labelledby="v-pills-1-tab">
-                            <div class="col-md-12 col-xs-12 min-vh-100">
-                                <div class="row m-0 card-group" id="article-container">
-                                    <% articles.forEach(article => { %>
-                                    <div class="col-lg-4 col-md-6 col-sm-6 px-2 py-2 m-0">
-                                          <div class="card text-dark">
-                                              <div class="card-body">
-                                                  <h5 class="card-title"><a href="/article/<%= article._id%>"><%= article.title %></a></h5>
-                                                  <p class="card-text"><%= article.desc %></p>
-                                                  <p class="card-text">Genre: <%= article.genre %></p>
-                                              </div>
-                                              <div class="card-footer">
-                                                <a class="btn btn-warning" href="/admin/warn/<%= article.author_id%>/<%= article._id%>">Warn</a></h5>
-                                                <a class="btn btn-danger" href="/admin/delete/<%= article._id%>">Delete</a></h5>
-                                              </div>
-                                          </div>
-                                    </div>
-                                    <% }) %>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="tab-pane fade" id="v-pills-2" role="tabpanel" aria-labelledby="v-pills-4-tab">
-                            <div class="col-md-12 col-xs-12 min-vh-100">
-
-                            </div>
+                            <% }) %>
                         </div>
                     </div>
                 </div>
