--- a/views/pages/liked_articles.ejs
+++ b/views/pages/liked_articles.ejs
@@ -24,7 +24,7 @@
                               Options
                             </a>
                             <div class="dropdown-menu" aria-labelledby="filterDropdown">
-                                <a class="dropdown-item" href="/users/articles">Dashboard</a>
+                                <a class="dropdown-item" href="/users/dashboard">Dashboard</a>
                                 <a class="dropdown-item" href="/users/articles">Your Articles</a>
                                 <a class="dropdown-item" href="/users/liked">Liked Articles</a>
                                 <a class="dropdown-item" href="/users/reported">Reported Articles</a>
