--- a/views/pages/newEditor.ejs
+++ b/views/pages/newEditor.ejs
@@ -71,7 +71,7 @@
                             <div class="form-check">
                               <input class="form-check-input" type="checkbox" id="gridCheck" name="termcheck" required>
                               <label class="form-check-label" for="gridCheck">
-                                  <a href="#">Please Read Terms and Conditions before proceeding
+                                  <a href="/users/terms">Please Read Terms and Conditions before proceeding
                                   </a>
                               </label>
                             </div>
