--- a/views/pages/admin_login.ejs
+++ b/views/pages/admin_login.ejs
@@ -49,7 +49,7 @@
 
         <script src="static/js/jquery/jquery.min.js"></script>
         <script src="static/js/bootstrap.bundle.min.js"></script>
-        <script src="static/js/jquery-easing/jquery.easing.min.js"></script>
+        <script src="static/js/jquery.easing.min.js"></script>
         <script src="static/js/admin.min.js"></script>
 
     </body>
