--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -21,7 +21,7 @@
                                         <div class="text-center">
                                             <h1 class="h4 text-gray-900 mb-4">Log In</h1>
                                         </div>
-                                        <%- include ('../partials/messages.ejs') %> 
+                                        <%- include ('../partials/messages.ejs') %>
                                         <form class="user" action="/users/login" method="POST">
                                             <div class="form-group">
                                                 <input type="email" class="form-control form-control-user"
@@ -52,7 +52,7 @@
 
         <script src="static/js/jquery/jquery.min.js"></script>
         <script src="static/js/bootstrap.bundle.min.js"></script>
-        <script src="static/js/jquery-easing/jquery.easing.min.js"></script>
+        <script src="static/js/jquery.easing.min.js"></script>
         <script src="static/js/admin.min.js"></script>
 
     </body>
