--- a/views/pages/article_view.ejs
+++ b/views/pages/article_view.ejs
@@ -85,7 +85,7 @@
   </section>
   <!-- Footer-->
   <footer class="footer bg-black small text-center text-white-50">
-    <div class="container">Copyright © Your Website 2020</div>
+    <div class="container">Copyright © Articleium 2020</div>
   </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
