--- a/views/pages/welcome.ejs
+++ b/views/pages/welcome.ejs
@@ -18,7 +18,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                        <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li> -->
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#features">Features</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Contact</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/admin">Admin</a></li>
